# ExtIO_sddc

./: .gitignore  ARM_OPTIMIZATIONS_SUMMARY.md  ARM_OPTIMIZATION_TEST_PLAN.md  CMakeLists.txt  HWSDRtable.h  OPTIMIZATION_LESSONS_LEARNED.md  QUALITY_AND_FEATURES_REPORT.md  README.md
Core/: CMakeLists.txt  RadioHandler.cpp  RadioHandler.h  fft_backend.h  fft_backend_accelerate.cpp  fft_backend_fftw.cpp  fft_backend_mkl.cpp  fft_benchmark.cpp  fft_mt_r2iq.cpp  fft_mt_r2iq.h  fft_mt_r2iq_avx2.cpp  fft_mt_r2iq_impl.hpp  fft_mt_r2iq_neon.cpp
Core/arch/linux/: FX3handler.cpp  FX3handler.h  streaming.c  usb_device.c
Core/dsp/: ringbuffer.h
Core/radio/: RX888R2Radio.cpp
libsddc/: libsddc.cpp  libsddc.h  wavewrite.c
unittest/: CMakeLists.txt  benchmark_test.cpp  core_test.cpp  libsddc_buffer_test.cpp  neon_test.cpp  signal_integrity_test.cpp  stability_test.cpp  vhf_test.cpp
